--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.1.2",
-    "react-scripts": "1.0.10"
+    "react-scripts": "1.0.10",
+    "throttle-debounce": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -15,8 +16,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {
-    "eslint": "^4.4.1",
-    "eslint-plugin-react": "^7.1.0"
-  }
+  "devDependencies": {}
 }
