feat: everything is working fine
I've been doing some testing on it, and so far is working as expected... so
it should be good to go

- still missing the documentation, and a little cleaning...

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.10",
+    "sort-by": "^1.2.0",
     "throttle-debounce": "^1.0.1"
   },
   "scripts": {
@@ -16,5 +17,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "react-addons-perf": "^15.4.2"
+  }
 }
