--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.10",
-    "sort-by": "^1.2.0",
     "throttle-debounce": "^1.0.1"
   },
   "scripts": {
@@ -17,7 +16,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {
-    "react-addons-perf": "^15.4.2"
-  }
+  "devDependencies": {}
 }
